--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ djangorestframework==3.14.0
 Pillow==9.5.0
 redis==4.5.5
 celery==5.3.0
+requests==2.31.0
+drf-yasg==1.21.6
+django-cors-headers==4.1.0
+coreapi==2.3.3
