--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,8 @@ requests==2.31.0
 drf-yasg==1.21.6
 django-cors-headers==4.1.0
 coreapi==2.3.3
+django-import-export==3.2.0
+pyTelegramBotAPI==4.12.0
+pandas==2.0.3
+pytest-django==4.5.2
+model_bakery==1.12.0
